testing/error/duplicateRotor.inp
* B GAMMA I V I YDFV (HI)
